--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>js - challenge</title>
 </head>
 <body>
-<script src="./js/app.js"></script>
+<!-- <script src="./js/app.js"></script> -->
+<script src="./js/arrays-challenge.js"></script>
 </body>
 </html>
